# Stochastic-Boltzmann-Machine

./: README.md  pyproject.toml
data/fasta/: CM.fasta
demos/CM/data/MSA_array/: MSA_CM.npy
demos/CM/scripts/: run-SBM-CM-family.sh
scripts/: MSA_to_np.py  run-SBM.sh
scripts/demo-SBM-CM-family/: plot-results.ipynb
src/SBM/utils/: utils.py
