[build-system]
requires = [
    "scikit-build-core>=0.7.0",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "SBM"
version = "0.0.2"
description = "Stochastic Boltzmann Machine"
authors = [{ name = "Marion" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "more-itertools",
]

[project.urls]
Homepage = "https://github.com/StatBio/Stochastic-Boltzmann-Machine"
Bug-Tracker = "https://github.com/StatBio/Stochastic-Boltzmann-Machine/-/issues"

[tool.scikit-build]
minimum-version = "0.7"
wheel.py-api = "cp311"

# IMPORTANT : activer un toolchain automatique sur macOS
cmake.args = [
    "-DCMAKE_TOOLCHAIN_FILE=cmake/macos_llvm.cmake"
]